wwr/styles/rafting.css
:root {
    --primary-color: #D7B131; 
    --secondary-color: #27A1CA;
    --accent1-color: #050605;
    --accent2-color: #E5FCFE;
    --heading-font: "Courgette", cursive;
    --body-font: "Lato", sans-serif;
}

header {
    background-color: var(--primary-color);
    color : var(--accent2-color);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: center;
    align-items: center;
}

header img {
    border: outset #27A1CA 5px;
    justify-self: center;
    
}

nav {
    display: flex;
    flex-flow: row wrap;
    text-align: center;
    align-items: center;
    justify-content: center;
    padding: 1rem;
}

header nav a {
    padding: 4px;
    border: outset var(--secondary-color) .20em;
    justify-content: center;
    text-decoration: none;
    color:var(--accent1-color);
    background-color: white;
    font-weight: bold;
    font-family: var(--heading-font);
    font-size: 1rem;
    width: 5.8rem;
    
    
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
}
header, main, footer {
    max-width: 840px;
    margin: 0 auto;
}

h1, h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
    text-align: center;
}

nav, p, section, article {
    margin: 1rem;
    padding: .5rem;
}


.socialmedia a {
    text-decoration: none;
}

.hero {
    display: block;
    position: relative;
    height: 27rem;
    padding: 0rem;
    
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}
h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 1rem;
    text-align: center;
    opacity: 0.7;
    background-color: var(--accent2-color);
    color: var(--accent1-color);
}

.hero article {
    display: block;
    position: absolute;
    background-color: var(--primary-color);
    opacity: .85;
    width: 100%;
    height: auto;
    top: 16.31rem; 
    color: var(--accent1-color);
    padding-bottom: .5rem;
    font-size: 2vh;
    margin: 0 auto;
}


.hero article img {
    float: right;
    height: 7.5rem;
    width: auto;
    padding: 2px;
    border: outset var(--secondary-color) 4px;
    opacity: 1;
    margin: 0 auto;
}

#history {
    position: relative;
    display: grid;
    grid-template-rows: 23% 1fr;
    margin: 2.5rem auto;
    align-items: center;
    min-height: 12rem;
}
 
#history h2 {
    text-align: center;
}

#adventure {
    margin: 0 auto;
    
    display: grid;
    grid-template-rows: 23% 77%;  
    border: solid var(--secondary-color);
}

#adventure ul {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    list-style: none;
    align-items: center;
    justify-content: space-around;
}

#adventure img {
    width: 93%;
    height: auto;
    border:outset var(--secondary-color);
    margin: 0 auto;
}

figcaption {
    font-size: .60em;
    text-align: center;
    margin-bottom: 1.5em;
}

footer {
    display: grid;
    grid-template-columns: 75% 25%;
    align-items: center;
}

footer p {
    grid-column: 1/2;
    justify-self: end;
    padding-right: 0;
}
footer nav {
    grid-column: 2/3;
    justify-self: center;
}

.socialmedia {
    display: flex;
    flex-flow: row wrap;
    gap: .5em;
    justify-content: center;
}

.form {
    margin: 1rem auto;
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: 60% 40%;
    /* Container  for .form and .map*/
}

.map {
    display: grid;
    grid-template-rows: 70% 30%;
    text-align: center;
    font-family: var(--heading-font);
    color: var(--primary-color);
}

iframe {
   justify-self: center;
   align-self: center;
   width: 16rem;
   height: 16rem;
}


form {
    margin: 0 0 3rem 0;
    padding: 0 1rem 2rem 1rem;
    border: solid var(--primary-color);
    border-radius: 2rem;
    
    grid-column: 1/2;
    align-self: center;
    justify-self: center;
    display: grid;
    
}

.info {
    display: grid;
    grid-template-rows: auto auto;
    
}

.ask {
    display:grid;
    grid-template-rows: auto auto;
    justify-content: start;
    text-align: left;
    padding: 0;
}

legend {
    font-family: var(--heading-font);
    font-size: 1.2rem;
    color: #27A1CA;
}

fieldset {
    margin: 2rem 0;
    padding: 1rem;
    border: 1.5px solid var(--primary-color);
    display: grid;
    
}
label {
    text-align: right;
    margin: .5rem;
    
}



input[type="checkbox"] {
    width: 1rem;
    height: auto;
}

button {
    margin: 1.1rem;
    padding: .4rem;
    border: solid var(--accent-color);
    background-color: var(--primary-color);
    color: var(--accent1-color);
    width: 7rem;
    height: 2.5rem;
    text-align: center;
    justify-self: center;
    border-radius: 1.5rem;
    font-size: 1.2rem;
}

button:hover {
    background-color: var(--secondary-color);}

